# arbot

./: .env.example  .gitignore  CLAUDE.md  docker-compose.monitoring.yml  package.json  pnpm-lock.yaml  pyproject.toml
.github/workflows/: deploy-docs.yml
configs/: default.yaml  exchanges.yaml
configs/prometheus/: prometheus.yml
deploy/oracle-cloud/: .env.example  docker-compose.yml  install.sh  setup.sh
docker/: Dockerfile  docker-compose.yml  prometheus.yml
docs/: AGENT_TEAM_PLAN.md  PRD.md  TASKS.md  TRD.md
docs-site/: index.md
docs-site/.vitepress/: config.mts
docs-site/concepts/: architecture.md  exchanges.md  glossary.md  strategies.md
docs-site/deployment/: docker.md  environment.md  oracle-cloud.md  production.md
docs-site/development/: project-structure.md  roadmap.md  testing.md
docs-site/en/: index.md
docs-site/guide/: configuration.md  installation.md  introduction.md  quick-start.md
docs-site/usage/: alerts.md  backtesting.md  monitoring.md  paper-trading.md  risk-management.md
scripts/: init_db.py  test_bybit_ws.py
scripts/sql/: clickhouse_schema.sql  postgres_schema.sql
src/arbot/: __init__.py  config.py  logging.py  main.py
tests/integration/: test_e2e_validation.py
tests/unit/: test_alerts.py  test_backtest_engine.py  test_binance_connector.py  test_collector.py  test_discord_commands.py  test_discord_notifier.py  test_main.py  test_metrics.py  test_models.py  test_normalizer.py  test_optimization.py  test_paper_executor.py  test_pipeline.py  test_rate_limiter.py  test_rebalancer.py  test_redis_cache.py  (+7 more)
(+76 files in other folders)
