[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arbot"
version = "0.1.0"
description = "Crypto Cross-Exchange Arbitrage System"
requires-python = ">=3.12"
dependencies = [
    "ccxt>=4.0",
    "websockets>=12.0",
    "aiohttp>=3.9",
    "numpy>=1.26",
    "pandas>=2.2",
    "polars>=0.20",
    "pydantic>=2.6",
    "pydantic-settings>=2.1",
    "redis>=5.0",
    "asyncpg>=0.29",
    "clickhouse-driver>=0.2",
    "structlog>=24.0",
    "uvloop>=0.19",
    "orjson>=3.9",
    "python-dotenv>=1.0",
    "prometheus-client>=0.20",
    "python-telegram-bot>=21.0",
    "discord.py>=2.3",
    "statsmodels>=0.14",
    "scipy>=1.12",
    "cryptography>=42.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov",
    "ruff>=0.2",
    "mypy>=1.8",
]

[project.scripts]
arbot = "arbot.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
